update project info

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "davehunterdesign",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.17.1"
+  },
   "description": "",
   "main": ".eleventy.js",
   "scripts": {
